fix nav button 1px too low

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ nav li.active a {
         position: fixed;
         display: block;
         right: 0;
-        top: 60px;
+        top: 59px;
         z-index: 1;
         height: 100%;
         width: 40px;
@@ -734,6 +734,7 @@ footer
 
 #footer {
     position: absolute;
+    z-index: 0;
     bottom: 0px;
     left: 50%;
     transform: translate(-50%);
